--- a/h8dsft_P0W3_jason_rich_darmawan_onggo_putra.ipynb
+++ b/h8dsft_P0W3_jason_rich_darmawan_onggo_putra.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "0qrq0uyyBsjr"
       },
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,6 +51,140 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "YHOfDRr_Syon"
+      },
+      "source": [
+        "# Problem Statement\n",
+        "\n",
+        "## 5W questions\n",
+        "\n",
+        "### Who is involved in this goal?\n",
+        "\n",
+        "1. The SEO engineer (to bring leads)2. The UI/UX engineer (to increase conversion rate)\n",
+        "3. The Front End engineer (to design the ecommerce according to UI/UX engineer's findings)\n",
+        "4. The Product Owner (to design the business logic)\n",
+        "5. The Back End engineer (to implement the business logic)\n",
+        "6. The Quality Assurance engineer (to make sure the product is working properly before The Look release the app)\n",
+        "7. The DevOps engineer (to scale the server accordingly for more active users)\n",
+        "8. The Photographer (to take photo of the product)\n",
+        "9. The Admin staff (to provide customer service or to close the deal).\n",
+        "10. The Packaging staff (to package the order)\n",
+        "11. The Shipper staff (to ship the order)\n",
+        "12. other role to handle complaint and returned order.\n",
+        "\n",
+        "Too many stakeholders. Consequently, the responsibility is spread too thin. No one is to be blamed when the goal is not met.\n",
+        "\n",
+        "Therefore, the analyst will choose accordingly:\n",
+        "1. the Photographer\n",
+        "2. the Admin staff\n",
+        "3. the Packaging staff\n",
+        "4. the Shipper staff.\n",
+        "\n",
+        "### What do I want to accomplish?\n",
+        "\n",
+        "Growth in number of orders, total sales, and number of active users with status Complete.\n",
+        "\n",
+        "### Where is this goal to be achieved?\n",
+        "\n",
+        "The order will be packaged in the warehouse and shipped to the user address. The goal is achieved when the order status is Complete.\n",
+        "\n",
+        "Therefore, the goal is achieved in user address.\n",
+        "\n",
+        "### When do I want to achieve this goal?\n",
+        "\n",
+        "Per month between Q1 to Q3 2022.\n",
+        "\n",
+        "### Why do I want to achieve this goal?\n",
+        "\n",
+        "Growth in active users should lead to growth in orders and growth in sales.\n",
+        "\n",
+        "## Measurable goals\n",
+        "\n",
+        "### How much? How many?\n",
+        "\n",
+        "The growth should be positive or above 0%. If below 0%, it is not a growth but a contraction.\n",
+        "\n",
+        "### How will I know when it is accomplished?\n",
+        "\n",
+        "After the Data Analyst calculate the number by the end of every month.\n",
+        "\n",
+        "## Achievable goal\n",
+        "\n",
+        "### How can I accomplish this goal?\n",
+        "\n",
+        "The Photographer, the Admin staff should live by the motto \"underpromise and overdeliver\". The Packaging staff should read the receipt before packaging the order. The Shipper staff should deliver the package safelly.\n",
+        "\n",
+        "### How realistic is the goal, based on other constraints, such as financial factors?\n",
+        "\n",
+        "A growth above 0% in orders, sales and active users is realistic. According to the dataset, The Look does not have column for discount. Therefore, the Data Analyst believe the orders are not met with discount offers.\n",
+        "\n",
+        "PS: probably we need to check the column sale_price in table order_items - column cost in table products.\n",
+        "\n",
+        "### Do I have the resources and capabilities to achieve the goal? If not, what am I missing?\n",
+        "\n",
+        "- [x] staffs\n",
+        "- [x] inventories\n",
+        "\n",
+        "The Data Anallyst concluded that The Look ecommerce have the resources and capabilities to achieve the goal.\n",
+        "\n",
+        "### Have others done it successfully before?\n",
+        "\n",
+        "Tokopedia and Shopee have done it successfully, but these competitors use discount offers irrationally. Consequently, although they are the market leaders, their net profit is in the red.\n",
+        "\n",
+        "## Relevant goal\n",
+        "\n",
+        "Does this seem worthwhile? Yes.\n",
+        "\n",
+        "Is this the right time? Yes.\n",
+        "\n",
+        "Does this match our other efforts/needs? Yes.\n",
+        "\n",
+        "Am I the right person to reach this goal? Yes. I have the Front End, Back End, Data Analyst technical know how.\n",
+        "\n",
+        "Is it applicable in the current socio-economic environment? No.\n",
+        "\n",
+        "## Time-bound goal\n",
+        "\n",
+        "When? Q1 - Q3 2022.\n",
+        "\n",
+        "What can I do six months from now? 1. Hire and train the staffs.\n",
+        "2. Take photo and video of the product.\n",
+        "\n",
+        "What can I do six weeks from now?\n",
+        "1. Prepare the training materials for the staffs.\n",
+        "2. Analyze the market to choose the product to sell in Q1 - Q3 2022.\n",
+        "\n",
+        "What can I do today?\n",
+        "1. Build the ecommerce (SEO, UI/UX, QA, scale, etc)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yjMu-IcQi4pz"
+      },
+      "source": [
+        "## SMART Goals\n",
+        "\n",
+        "The Photographer, the Admin staff, the Packaging staff, the Shipper staff will increase orders, sales and active users with status Complete above 0% month to month between Q1 to Q3 2022."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z104jtgLgojS"
+      },
+      "source": [
+        "## Our Problem Statement\n",
+        "\n",
+        "The Look Ecommerce deserves new investor because it is a growing startup in terms of transactions, GMV and active users. To fulfill these criteria, The Look Ecommerce must be aware of product category that contributes the most in quantity or revenue.\n",
+        "\n",
+        "\"What and when a product category contributes in quantity or revenue the most month to month in Q1 - Q3 2022?\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "K5_vaPla7LUR"
       },
       "source": [
@@ -70,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -230,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -530,7 +664,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -678,7 +812,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -899,7 +1033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1148,7 +1282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1287,7 +1421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1476,7 +1610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1668,7 +1802,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1928,7 +2062,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2175,7 +2309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2399,7 +2533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2638,7 +2772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2905,7 +3039,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3144,7 +3278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3340,7 +3474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3521,7 +3655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3760,7 +3894,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4025,7 +4159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4266,7 +4400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -4888,7 +5022,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5040,127 +5174,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YHOfDRr_Syon"
-      },
-      "source": [
-        "# Problem Statement\n",
-        "\n",
-        "## 5W questions\n",
-        "\n",
-        "### Who is involved in this goal?\n",
-        "\n",
-        "1. The SEO engineer (to bring leads)2. The UI/UX engineer (to increase conversion rate)\n",
-        "3. The Front End engineer (to design the ecommerce according to UI/UX engineer's findings)\n",
-        "4. The Product Owner (to design the business logic)\n",
-        "5. The Back End engineer (to implement the business logic)\n",
-        "6. The Quality Assurance engineer (to make sure the product is working properly before The Look release the app)\n",
-        "7. The DevOps engineer (to scale the server accordingly for more active users)\n",
-        "8. The Photographer (to take photo of the product)\n",
-        "9. The Admin staff (to provide customer service or to close the deal).\n",
-        "10. The Packaging staff (to package the order)\n",
-        "11. The Shipper staff (to ship the order)\n",
-        "12. other role to handle complaint and returned order.\n",
-        "\n",
-        "Too many stakeholders. Consequently, the responsibility is spread too thin. No one is to be blamed when the goal is not met.\n",
-        "\n",
-        "Therefore, the analyst will choose accordingly:\n",
-        "1. the Photographer\n",
-        "2. the Admin staff\n",
-        "3. the Packaging staff\n",
-        "4. the Shipper staff.\n",
-        "\n",
-        "### What do I want to accomplish?\n",
-        "\n",
-        "Growth in number of orders, total sales, and number of active users with status Complete.\n",
-        "\n",
-        "### Where is this goal to be achieved?\n",
-        "\n",
-        "The order will be packaged in the warehouse and shipped to the user address. The goal is achieved when the order status is Complete.\n",
-        "\n",
-        "Therefore, the goal is achieved in user address.\n",
-        "\n",
-        "### When do I want to achieve this goal?\n",
-        "\n",
-        "Per month between Q1 to Q3 2022.\n",
-        "\n",
-        "### Why do I want to achieve this goal?\n",
-        "\n",
-        "Growth in active users should lead to growth in orders and growth in sales.\n",
-        "\n",
-        "## Measurable goals\n",
-        "\n",
-        "### How much? How many?\n",
-        "\n",
-        "The growth should be positive or above 0%. If below 0%, it is not a growth but a contraction.\n",
-        "\n",
-        "### How will I know when it is accomplished?\n",
-        "\n",
-        "After the Data Analyst calculate the number by the end of every month.\n",
-        "\n",
-        "## Achievable goal\n",
-        "\n",
-        "### How can I accomplish this goal?\n",
-        "\n",
-        "The Photographer, the Admin staff should live by the motto \"underpromise and overdeliver\". The Packaging staff should read the receipt before packaging the order. The Shipper staff should deliver the package safelly.\n",
-        "\n",
-        "### How realistic is the goal, based on other constraints, such as financial factors?\n",
-        "\n",
-        "A growth above 0% in orders, sales and active users is realistic. According to the dataset, The Look does not have column for discount. Therefore, the Data Analyst believe the orders are not met with discount offers.\n",
-        "\n",
-        "PS: probably we need to check the column sale_price in table order_items - column cost in table products.\n",
-        "\n",
-        "### Do I have the resources and capabilities to achieve the goal? If not, what am I missing?\n",
-        "\n",
-        "- [x] staffs\n",
-        "- [x] inventories\n",
-        "\n",
-        "The Data Anallyst concluded that The Look ecommerce have the resources and capabilities to achieve the goal.\n",
-        "\n",
-        "### Have others done it successfully before?\n",
-        "\n",
-        "Tokopedia and Shopee have done it successfully, but these competitors use discount offers irrationally. Consequently, although they are the market leaders, their net profit is in the red.\n",
-        "\n",
-        "## Relevant goal\n",
-        "\n",
-        "Does this seem worthwhile? Yes.\n",
-        "\n",
-        "Is this the right time? Yes.\n",
-        "\n",
-        "Does this match our other efforts/needs? Yes.\n",
-        "\n",
-        "Am I the right person to reach this goal? Yes. I have the Front End, Back End, Data Analyst technical know how.\n",
-        "\n",
-        "Is it applicable in the current socio-economic environment? No.\n",
-        "\n",
-        "## Time-bound goal\n",
-        "\n",
-        "When? Q1 - Q3 2022.\n",
-        "\n",
-        "What can I do six months from now? 1. Hire and train the staffs.\n",
-        "2. Take photo and video of the product.\n",
-        "\n",
-        "What can I do six weeks from now?\n",
-        "1. Prepare the training materials for the staffs.\n",
-        "2. Analyze the market to choose the product to sell in Q1 - Q3 2022.\n",
-        "\n",
-        "What can I do today?\n",
-        "1. Build the ecommerce (SEO, UI/UX, QA, scale, etc)."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "yjMu-IcQi4pz"
-      },
-      "source": [
-        "## SMART Goals\n",
-        "\n",
-        "The Photographer, the Admin staff, the Packaging staff, the Shipper staff will increase orders, sales and active users with status Complete above 0% month to month between Q1 to Q3 2022."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "va8dyiacM3tB"
       },
       "source": [
@@ -5280,7 +5293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5459,7 +5472,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5638,7 +5651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -5817,7 +5830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
